--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -133,6 +133,16 @@ td {
     display: flex;
     justify-content: space-between;
 }
+
+/* Left/Right item */
+.left-item {}
+.right-item {
+    display: flex;   
+    gap: 10px;
+    padding-right: 10px;
+}
+
+/* Logo */
 .logo-wrap {
     display: flex;
     padding-top: 6px;
@@ -331,6 +341,12 @@ li .lang-title {
     left: 0;
     position: absolute;
     bottom: 7px;
+}
+
+/* AI translation disclaimer -------------------------------------- */
+.ai-translation-disclaimer {
+    display: flex;
+    align-items: center;
 }
 
 /* Section top page -------------------------------------- */
