modified for MarsFinder

--- a/layouts/partials/searchbox.html
+++ b/layouts/partials/searchbox.html
@@ -1,16 +1,13 @@
 {{- $filter := (slice) }}
-{{- $paramfilter := "" }}
 {{- if eq .Site.Params.google_search true }}
-  {{- $paramfilter = .Site.Params.google_search_tabs }}
-{{- else if eq .Site.Params.bing_search true }}
-  {{- $paramfilter = .Site.Params.bing_search_tabs }}
-{{- end }}
-{{- if eq $paramfilter nil}}
-  {{- $paramfilter = "" }}
-{{- end }}
-{{- if gt ( $paramfilter | len ) 0 }}
-  {{- $paramfilter = strings.TrimLeft "[" $paramfilter }}
-  {{- $paramfilter = strings.TrimRight "]" $paramfilter }}
+  {{- $paramfilter := .Site.Params.google_search_tabs }}
+  {{- if gt ( $paramfilter | len ) 0 }}
+    {{- $paramfilter = strings.TrimLeft "[" $paramfilter }}
+    {{- $paramfilter = strings.TrimRight "]" $paramfilter }}
+    {{- $filter = split $paramfilter "," }}
+  {{- end }}
+{{- else if eq .Site.Params.TargetRegion "CN" }}
+  {{- $paramfilter := .Site.Params.search_categories }}
   {{- $filter = split $paramfilter "," }}
 {{- end }}
 {{- $fullsize := false }}
@@ -25,7 +22,7 @@
 {{- end }}
     <div id="search" class="search-wrap" role="search" >
       <div class="searchbox">
-        {{- if ne $paramfilter "" }}
+        {{- if gt ( $filter | len ) 0 }}
           {{- $buttonstyle := "search-filter-current" }}
           {{- if eq $fullsize true }}
             {{- $buttonstyle = (printf "%s %s" $buttonstyle "search-filter-current-top") }}
@@ -48,14 +45,6 @@
         <input type="search" id="search-input" class="search-input" placeholder='{{ $ph }}' aria-label='{{i18n "search_word"}}'>
         <button class="search-submit" title='{{i18n "search"}}' aria-label='{{i18n "search"}}'></button>
       </div>
-{{- if eq $fullsize true }}
-      <div id="logo_place" class="search-logo {{ if eq .Site.Params.bing_search true }} search-logo-bing{{ end }}">
-          {{- if eq .Site.Params.bing_search true }}
-              <span>{{ i18n "search_bing" }} (<a href="https://www.microsoft.com/en-gb/privacy/privacystatement" target="_blank">{{ i18n "search_bing_legal" }}</a>)</span>
-          {{- end }}
-      </div>
-{{- end }}
-    </div>
 {{- if eq .Site.Params.google_search true }}
   {{- $glang := $.Lang}}
   {{- if eq $glang "zh" }}
@@ -68,5 +57,9 @@
     {{- $logoplace = "logo_place" }}
   {{- end }}
   <script src="https://www.gstatic.com/prose/brand.js" targetId="{{$logoplace}}" hl="{{$glang}}"></script>
+{{- else }}
+  <br>
 {{- end }}
+    </div>
+
 
