--- a/layouts/gr6/home/index.html
+++ b/layouts/gr6/home/index.html
@@ -35,8 +35,9 @@
                                 data-disable-with=""
                                 aria-label="{{ i18n "search" }}"
                             ></button>
-                            {{- if and ( ne .Site.Params.google_search true ) ( ne .Site.Params.bing_search true ) -}}
-                                <input type="hidden" name="ct" value="{{ .Site.Params.search_all }}" />
+                            {{- if eq $.Site.Params.TargetRegion "CN" }}
+                                <input type="hidden" name="c" value="{{ .Site.Params.search_all }}" />
+                                <input type="hidden" name="is" value="0" />
                             {{- end -}}
                             {{- if eq .Site.Params.google_search true }}
                                 <script src="https://www.gstatic.com/prose/brand.js" targetId="topSearchBox_input" hl="{{$.Lang}}"></script>
