removed bing settings

--- a/layouts/gr6/home/index.html
+++ b/layouts/gr6/home/index.html
@@ -44,7 +44,7 @@
                             {{- end }}
                         </div>
                     </form>
-                    <div id="logo_place" class="search-logo {{ if eq .Site.Params.bing_search true }} search-logo-bing home-search-logo-text{{ end }}">
+                    <div id="logo_place" class="search-logo">
                     </div>
                 </div>
             </div>
